# fp

./: README.md  README_EN.md  build.gradle.kts  gradle.properties  pake.py
apd/src/: apd.rs  module.rs
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/me/bmax/apatch/services/: RootServices.java
app/src/main/java/me/bmax/apatch/ui/: MainActivity.kt  WebUIActivity.kt
app/src/main/java/me/bmax/apatch/ui/component/: KpmAutoLoadConfig.kt  UpdateDialog.kt
app/src/main/java/me/bmax/apatch/ui/screen/: APM.kt  ApmBulkInstallScreen.kt  BottomBarDestination.kt  Home.kt  HomeV2.kt  Install.kt  InstallModeSelect.kt  KpmAutoLoadConfigScreen.kt  OnlineKPMScreen.kt  OnlineModuleScreen.kt  Patches.kt  Settings.kt  SuperUser.kt  ThemeStore.kt
app/src/main/java/me/bmax/apatch/ui/theme/: BackgroundConfig.kt  BackgroundLayer.kt  CardManage.kt  FontConfig.kt  Theme.kt  ThemeManager.kt
app/src/main/java/me/bmax/apatch/ui/viewmodel/: APModuleViewModel.kt  OnlineKPMViewModel.kt  OnlineModuleViewModel.kt  PatchesViewModel.kt  SuperUserViewModel.kt  ThemeStoreViewModel.kt
app/src/main/java/me/bmax/apatch/ui/webui/: WebViewInterface.kt
app/src/main/java/me/bmax/apatch/util/: LogEvent.kt  PkgConfig.kt  UpdateChecker.kt
app/src/main/res/drawable/: app_icon2_adaptive_foreground.xml
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-mgl/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rAT/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/values-zh-rWC/: strings.xml
